// The MIT License
//
// Copyright (c) 2020 Temporal Technologies Inc.  All rights reserved.
//
// Copyright (c) 2020 Uber Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

package main

import (
	"flag"
	"fmt"
	"io"
	"log"
	"os"
	"path"
	"reflect"
	"strings"
	"text/template"

	commonpb "go.temporal.io/api/common/v1"
	"go.temporal.io/api/operatorservice/v1"
	"go.temporal.io/api/workflowservice/v1"
	"go.temporal.io/server/api/adminservice/v1"
	"go.temporal.io/server/api/historyservice/v1"
	"go.temporal.io/server/api/matchingservice/v1"
)

const maxRequestDepth = 5

type (
	methodData struct {
		RequestType      string
		WorkflowIdGetter string
		RunIdGetter      string
		TaskTokenGetter  string
	}

	serverData struct {
		Server  string
		Imports []string
		Methods []methodData
	}
)

var (
	executionGetterT = reflect.TypeOf((*interface {
		GetExecution() *commonpb.WorkflowExecution
	})(nil)).Elem()

	workflowExecutionGetterT = reflect.TypeOf((*interface {
		GetWorkflowExecution() *commonpb.WorkflowExecution
	})(nil)).Elem()

	taskTokenGetterT = reflect.TypeOf((*interface {
		GetTaskToken() []byte
	})(nil)).Elem()

	workflowIdGetterT = reflect.TypeOf((*interface {
		GetWorkflowId() string
	})(nil)).Elem()

	runIdGetterT = reflect.TypeOf((*interface {
		GetRunId() string
	})(nil)).Elem()
)

func main() {
	outPathFlag := flag.String("out", ".", "path to write generated files")
	licenseFlag := flag.String("copyright_file", "../../../LICENSE", "path to license to copy into header")
	flag.Parse()

	licenseText := readLicenseFile(*licenseFlag)

	for _, server := range servers() {
		callWithFile(generateWorkflowTagGetters, server, *outPathFlag, licenseText)
	}
}

func servers() []reflect.Type {
	return []reflect.Type{
		reflect.TypeOf((*workflowservice.WorkflowServiceServer)(nil)).Elem(),
		reflect.TypeOf((*operatorservice.OperatorServiceServer)(nil)).Elem(),
		reflect.TypeOf((*adminservice.AdminServiceServer)(nil)).Elem(),
		reflect.TypeOf((*historyservice.HistoryServiceServer)(nil)).Elem(),
		reflect.TypeOf((*matchingservice.MatchingServiceServer)(nil)).Elem(),
	}
}

func generateWorkflowTagGetters(w io.Writer, server reflect.Type) {

	writeServerData(w, server, `
package logtags

import (
{{- range .Imports}}
	{{printf "%q" .}}
{{- end}}
	"go.temporal.io/server/common/log/tag"
)

func (wt *WorkflowTags) extractFrom{{.Server}}Request(req any) []tag.Tag {
	switch r := req.(type) {
	{{- range .Methods}}
	case {{.RequestType}}:
	{{- if or .TaskTokenGetter .WorkflowIdGetter .RunIdGetter}}
		{{- if .TaskTokenGetter}}
		return wt.fromTaskToken(r.{{ .TaskTokenGetter}})
		{{- else}}
		return []tag.Tag{
			{{if .WorkflowIdGetter}}tag.WorkflowID(r.{{.WorkflowIdGetter}}),{{end}}{{if .WorkflowIdGetter}}
			{{end}}{{if .RunIdGetter}}tag.WorkflowRunID(r.{{.RunIdGetter}}),{{end}}{{if .RunIdGetter}}
		{{end}}}
		{{- end}}
	{{- else}}
		return nil
	{{- end -}}
	{{- end}}
	default:
		return nil
	}
}
`)
}

func callWithFile(generator func(io.Writer, reflect.Type), server reflect.Type, outPath string, licenseText string) {
	filename := path.Join(outPath, camelCaseToSnakeCase(server.Name())+"_gen.go")
	w, err := os.Create(filename)
	fatalIfErr(err)
	defer func() {
		fatalIfErr(w.Close())
	}()
	_, err = fmt.Fprintf(w, "%s\n// Code generated by cmd/tools/genfaultinjection. DO NOT EDIT.\n", licenseText)
	fatalIfErr(err)
	generator(w, server)
}

func workflowTagGetters(requestT reflect.Type, depth int) methodData {
	md := methodData{}
	if depth > maxRequestDepth {
		return md
	}

	if requestT.AssignableTo(executionGetterT) {
		md.WorkflowIdGetter = "GetExecution().GetWorkflowId()"
		md.RunIdGetter = "GetExecution().GetRunId()"
	} else if requestT.AssignableTo(workflowExecutionGetterT) {
		md.WorkflowIdGetter = "GetWorkflowExecution().GetWorkflowId()"
		md.RunIdGetter = "GetWorkflowExecution().GetRunId()"
	} else if requestT.AssignableTo(taskTokenGetterT) {
		// Special case to avoid deprecated RespondQueryTaskCompleted API token which does not have WorkflowId.
		if requestT.AssignableTo(reflect.TypeOf((*workflowservice.RespondQueryTaskCompletedRequest)(nil)).Elem()) {
			return md
		}
		md.TaskTokenGetter = "GetTaskToken()"
	} else {
		if requestT.AssignableTo(workflowIdGetterT) {
			md.WorkflowIdGetter = "GetWorkflowId()"
		}
		if requestT.AssignableTo(runIdGetterT) {
			md.RunIdGetter = "GetRunId()"
		}
	}
	if md.WorkflowIdGetter == "" && md.RunIdGetter == "" && md.TaskTokenGetter == "" {
		for fieldNum := 0; fieldNum < requestT.Elem().NumField(); fieldNum++ {
			nestedRequest := requestT.Elem().Field(fieldNum)
			if nestedRequest.Type.Kind() != reflect.Ptr {
				continue
			}
			if nestedRequest.Type.Elem().Kind() != reflect.Struct {
				continue
			}

			md = workflowTagGetters(nestedRequest.Type, depth+1)
			if md.WorkflowIdGetter != "" {
				md.WorkflowIdGetter = fmt.Sprintf("Get%s().%s", nestedRequest.Name, md.WorkflowIdGetter)
			}
			if md.RunIdGetter != "" {
				md.RunIdGetter = fmt.Sprintf("Get%s().%s", nestedRequest.Name, md.RunIdGetter)
			}
			if md.TaskTokenGetter != "" {
				md.TaskTokenGetter = fmt.Sprintf("Get%s().%s", nestedRequest.Name, md.TaskTokenGetter)
			}
		}
	}
	return md
}

func writeServerData(w io.Writer, server reflect.Type, tmpl string) {
	sd := serverData{
		Server:  server.Name(),
		Imports: []string{server.PkgPath()},
	}

	for i := 0; i < server.NumMethod(); i++ {
		serverMethodT := server.Method(i).Type
		if serverMethodT.NumIn() < 2 {
			continue
		}
		requestT := serverMethodT.In(1) // Assume request is always the second parameter.

		md := workflowTagGetters(requestT, 0)
		md.RequestType = requestT.String()
		sd.Methods = append(sd.Methods, md)
	}

	fatalIfErr(template.Must(template.New("code").Parse(tmpl)).Execute(w, sd))
}

func readLicenseFile(filePath string) string {
	text, err := os.ReadFile(filePath)
	if err != nil {
		panic(err)
	}
	var lines []string
	for _, line := range strings.Split(string(text), "\n") {
		lines = append(lines, strings.TrimRight("// "+line, " "))
	}
	return strings.Join(lines, "\n") + "\n"
}

func fatalIfErr(err error) {
	if err != nil {
		//nolint:revive // calls to log.Fatal only in main() or init() functions (revive)
		log.Fatal(err)
	}
}

func camelCaseToSnakeCase(s string) string {
	if s == "" {
		return ""
	}
	t := make([]rune, 0, len(s)+5)
	for i, c := range s {
		if isASCIIUpper(c) {
			if i != 0 {
				t = append(t, '_')
			}
			c ^= ' ' // Make it a lower letter.
		}
		t = append(t, c)
	}
	return string(t)
}

func isASCIIUpper(c rune) bool {
	return 'A' <= c && c <= 'Z'
}
